--- a/index.html
+++ b/index.html
@@ -6,10 +6,36 @@
     <meta charset="utf8">
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
+    <div class="wrapper">
+        <div class="stock-header">
+            <h1 class="stock-name">Advanced Micro Devices Inc.</h1>
+            <h1 class="stock-symbol">(AMD)</h1>
+            <br>
+            <h1 class="stock-price">15.31</h1>
+            <h1 class="stock-price-diff">+0.085 (+0.56%)</h1>
+        </div>
+
+        <div class="stock-chart">
+            <canvas width="600" height="275" id="stockChart"></canvas>
+        </div>
+
+        <div class="time-period">
+            <button class="time-period-button">1D</button>
+            <button class="time-period-button">1M</button>
+            <button class="time-period-button">3M</button>
+            <button class="time-period-button">6M</button>
+            <button class="time-period-button">YTD</button>
+            <button class="time-period-button">1Y</button>
+            <button class="time-period-button">2Y</button>
+            <button class="time-period-button">5Y</button>
+        </div>
+    </div>
+
     <script src="index.js"></script>
 </body>
 
