added a search bar for stocks

--- a/index.html
+++ b/index.html
@@ -6,11 +6,17 @@
     <meta charset="utf8">
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
+    <div class="search-bar">
+        <h1>Tikr</h1>
+        <input type="text" placeholder="Search stocks" class="search" id="search" autocomplete="off">
+    </div>
+
     <div class="wrapper">
         <div class="stock-header">
             <h1 class="stock-name" id="stockName">...</h1>
