--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <div class="search-bar">
         <h1>Tikr</h1>
         <input type="text" placeholder="Search stocks" class="search" id="search" autocomplete="off">
+        <a href="login.html" class="login">Login</a>
     </div>
 
     <div class="wrapper">
