--- a/login.html
+++ b/login.html
@@ -11,10 +11,12 @@
 
 <body>
     <div class="wrapper-form">
-        <a href="index.html" tabindex="-1">Tikr</a>
+        <a href="index.html" tabindex="-1"><img src="tikr.png" alt="Tikr" width="50" height="50"></a>
 
+        <div class="form-error" hidden></div>
+            
         <form class="form-login">
-            <input type="text" name="username" placeholder="Username" class="form-input">
+            <input type="text" name="email" placeholder="Email" class="form-input">
             <input type="text" name="password" placeholder="Password" class="form-input form-password">
             <input type="submit" name="login" value="Login" class="form-submit">
             <input type="button" name="create" value="Create an account" class="form-textbutton" tabindex="-1">
@@ -32,7 +34,7 @@
         <form class="form-forgot-password" hidden>
             <input type="text" name="email" placeholder="Email" class="form-input">
             <input type="submit" name="reset" value="Reset Password" class="form-submit">
-            <input type="button" name="login" value="Remember yet?" class="form-textbutton" tabindex="-1">
+            <input type="button" name="login" value="Back to login" class="form-textbutton" tabindex="-1">
         </form>
     </div>
 
