changed layout of site => static sidebar, dynamic content in center

--- a/index.html
+++ b/index.html
@@ -4,43 +4,71 @@
 <head>
     <title>Tikr</title>
     <meta charset="utf8">
-    
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="
+        crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
-    <div class="search-bar">
-        <h1>Tikr</h1>
-        <input type="text" placeholder="Search stocks" class="search" id="search" autocomplete="off">
-        <a href="login.html" class="login">Login</a>
+    <div class="sidebar">
+        <div class="wrapper-logo">
+            <a href="index.html">
+                <img src="assets/tikr.png" alt="Tikr" width="50" height="50">
+            </a>
+        </div>
+
+        <div class="gradient-border"></div>
+
+        <ul>
+            <li>
+                <a href="index.html">Home</a>
+            </li>
+            <li>
+                <a href="#" id="login">Login</a>
+            </li>
+            <li>
+                <a href="#" id="stocks">Stocks</a>
+            </li>
+        </ul>
     </div>
 
-    <div class="wrapper">
-        <div class="stock-header">
-            <h1 class="stock-name" id="stockName">...</h1>
-            <h1 class="stock-symbol" id="stockSymbol"></h1>
-            <br><br>
-            <h1 class="stock-price" id="stockPrice">...</h1>
-            <h1 class="stock-price-diff" id="stockDiff"></h1>
-        </div>
+    <div class="wrapper-login wrapper">
+        <img src="assets/tikr.png" alt="Tikr" width="50" height="50">
 
-        <div class="stock-chart">
-            <canvas id="stockChart"></canvas>
-        </div>
+        <div class="form-error" hidden></div>
 
-        <div class="time-period">
-            <button class="time-period-button selected">1D</button>
-            <button class="time-period-button">1M</button>
-            <button class="time-period-button">3M</button>
-            <button class="time-period-button">6M</button>
-            <button class="time-period-button">YTD</button>
-            <button class="time-period-button">1Y</button>
-            <button class="time-period-button">2Y</button>
-            <button class="time-period-button">5Y</button>
-        </div>
+        <form class="form-login">
+            <input type="text" name="email" placeholder="Email" class="form-input">
+            <input type="text" name="password" placeholder="Password" class="form-input form-password">
+            <input type="submit" name="login" value="Login" class="form-submit">
+            <input type="button" name="create" value="Create an account" class="form-textbutton" tabindex="-1">
+            <input type="button" name="forgot" value="Fogot your password?" class="form-textbutton" tabindex="-1">
+        </form>
+
+        <form class="form-create-account" hidden>
+            <input type="text" name="email" placeholder="Email" class="form-input">
+            <input type="text" name="password" placeholder="Password" class="form-input form-password">
+            <input type="text" name="password2" placeholder="Confirm Password" class="form-input form-password">
+            <input type="submit" name="create" value="Create Account" class="form-submit">
+            <input type="button" name="login" value="Already have an account?" class="form-textbutton" tabindex="-1">
+        </form>
+
+        <form class="form-forgot-password" hidden>
+            <input type="text" name="email" placeholder="Email" class="form-input">
+            <input type="submit" name="reset" value="Reset Password" class="form-submit">
+            <input type="button" name="login" value="Back to login" class="form-textbutton" tabindex="-1">
+        </form>
+    </div>
+
+    <div class="wrapper-search wrapper">
+        <input type="text" placeholder="Search stocks" autocomplete="off">
+    </div>
+
+    <div class="wrapper-stocks wrapper">
+
     </div>
 
     <script src="index.js"></script>
