readded stock name, symbol, price, started reworking chart

--- a/index.html
+++ b/index.html
@@ -68,7 +68,15 @@
     </div>
 
     <div class="wrapper-stocks wrapper">
+        <h1 id="stockName"></h1>
+        <h1 id="stockSymbol"></h1>
+        <br>
+        <h1 id="stockPrice"></h1>
+        <h1 id="priceDiff"></h1>
 
+        <div class="wrapper-chart">
+            <canvas id="stockChart"></canvas>
+        </div>
     </div>
 
     <script src="index.js"></script>
