--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <h1 id="stockPrice"></h1>
         <h1 id="priceDiff"></h1>
 
-        <div class="wrapper-chart">
+        <div class="wrapper-chart" hidden>
             <canvas id="stockChart"></canvas>
         </div>
     </div>
