db now uses connection pooling

--- a/index.html
+++ b/index.html
@@ -77,6 +77,10 @@
         <div class="wrapper-chart" hidden>
             <canvas id="stockChart"></canvas>
         </div>
+
+        <div>
+            
+        </div>
     </div>
 
     <script src="index.js"></script>
