--- a/index.html
+++ b/index.html
@@ -78,8 +78,14 @@
             <canvas id="stockChart"></canvas>
         </div>
 
-        <div>
-            
+        <div class="wrapper-periods">
+            <button>1D</button>
+            <button>1M</button>
+            <button>3M</button>
+            <button>6M</button>
+            <button>YTD</button>
+            <button>2Y</button>
+            <button>5Y</button>
         </div>
     </div>
 
