fixed 1d charts, added buttons to change chart time period

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </div>
 
         <div class="wrapper-periods">
-            <button>1D</button>
+            <button class="active-period">1D</button>
             <button>1M</button>
             <button>3M</button>
             <button>6M</button>
