added another wrapper containing company information (WIP)

--- a/index.html
+++ b/index.html
@@ -89,6 +89,39 @@
         </div>
     </div>
 
+    <div class="wrapper-company wrapper">
+        <h1>Company</h1>
+
+        <div class="companyLeft">
+            <p id="companyDesc"></p>
+            <br>
+
+            <div style="float: left; width: calc(50% - 20px);">
+                <h1>EXCHANGE</h1>
+                <p id="companyExchange"></p>
+                <br>
+                <h1>SECTOR</h1>
+                <p id="companySector"></p>
+                <br>
+                <h1>WEBSITE</h1>
+                <p><a id="companyWebsite" target="_blank"></a></p>
+            </div>
+
+            <div style="float: right; width: calc(50% - 20px); margin-right: 40px;">
+                <h1>INDUSTRY</h1>
+                <p id="companyIndustry"></p>
+                <br>
+                <h1>CEO</h1>
+                <p id="companyCEO"></p>
+            </div>
+        </div>
+
+        <div class="companyRight">
+
+        </div>
+       
+    </div>
+
     <script src="index.js"></script>
 </body>
 
